--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/DatePicker.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/DatePicker.cshtml
@@ -57,14 +57,14 @@
     else
     {
         <script type="text/javascript">
-            $(function() {
+            $(function () {
                 $('#@controlId').datepicker({
-                    format: '@Thread.CurrentThread.CurrentUICulture.DateTimeFormat.ShortDatePattern.ToLower()',
-            clearBtn: true,
-            autoclose: true,
-            weekStart: 1,
-            todayHighlight: true,
-            format: 'yyyy-mm-dd'
+                    //format: '@Thread.CurrentThread.CurrentUICulture.DateTimeFormat.ShortDatePattern.ToLower()',
+                    clearBtn: true,
+                    autoclose: true,
+                    weekStart: 1,
+                    todayHighlight: true,
+                    format: 'yyyy-mm-dd'
                 });
             });
         </script>
