[FIX] Translations GlobalSetting

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/Index.cshtml
@@ -428,15 +428,15 @@
                 },
                 translations:
                 {
-                    dataPrivacyConfirmation: '@Translation.GetForJS("Ar du saker pa att du vill ersatta informationen i utvalda arenden?")',
+                    dataPrivacyConfirmation: '@Translation.GetForJS("Är du säker på att du vill ersätta informationen i utvalda ärenden?")',
                     operationSuccessMessage: '@Translation.GetForJS("Klar")',
-                    createNewFavorite: '@Translation.GetForJS("Skappa Ny")',
+                    createNewFavorite: '@Translation.GetForJS("Skapa Ny")',
 
                     //validation messages
-                    SelectedCustomerIdRequired: '@Translation.GetForJS("Kund") @Translation.GetForJS("maste anges")',
-                    FieldsNamesRequired: '@Translation.GetForJS("Falt") @Translation.GetForJS("maste anges")',
-                    RegisterDateFromRequired: '@Translation.GetForJS("Registreringsdatum") @Translation.GetForJS("maste anges")',
-                    RegisterDateToRequired: '@Translation.GetForJS("Registreringsdatum") @Translation.GetForJS("maste anges")'
+                    SelectedCustomerIdRequired: '@Translation.GetForJS("Kund") @Translation.GetForJS("måste anges")',
+                    FieldsNamesRequired: '@Translation.GetForJS("Fält") @Translation.GetForJS("måste anges")',
+                    RegisterDateFromRequired: '@Translation.GetForJS("Registreringsdatum") @Translation.GetForJS("måste anges")',
+                    RegisterDateToRequired: '@Translation.GetForJS("Registreringsdatum") @Translation.GetForJS("måste anges")'
                 },
                 confirmDialog: confirmationDialog
             };
