--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/Index.cshtml
@@ -440,7 +440,8 @@
                     FieldsNamesRequired: '@Translation.GetForJS("Fält") @Translation.GetForJS("måste anges")',
                     RegisterDateFromRequired: '@Translation.GetForJS("Registreringsdatum") @Translation.GetForJS("måste anges")',
                     RegisterDateToRequired: '@Translation.GetForJS("Registreringsdatum") @Translation.GetForJS("måste anges")',
-                    InvalidDateRange: '@Translation.GetForJS("Valt datumintervall är ogiltigt")'
+                    InvalidDateRange: '@Translation.GetForJS("Valt datumintervall är ogiltigt")',
+                    MaxLength: '@Translation.GetForJS("Ange högst {0} tecken")'
                 },
                 confirmDialog: confirmationDialog
             };
