[FIX] - Added to “Replace data with” maxlength validation (reverted from commit 55c854d8eeeff9390d35b8d1e63bd4acad99e167)

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/Index.cshtml
@@ -440,8 +440,7 @@
                     FieldsNamesRequired: '@Translation.GetForJS("Fält") @Translation.GetForJS("måste anges")',
                     RegisterDateFromRequired: '@Translation.GetForJS("Registreringsdatum") @Translation.GetForJS("måste anges")',
                     RegisterDateToRequired: '@Translation.GetForJS("Registreringsdatum") @Translation.GetForJS("måste anges")',
-                    InvalidDateRange: '@Translation.GetForJS("Valt datumintervall är ogiltigt")',
-                    MaxLength: '@Translation.GetForJS("Ange högst {0} tecken")'
+                    InvalidDateRange: '@Translation.GetForJS("Valt datumintervall är ogiltigt")'
                 },
                 confirmDialog: confirmationDialog
             };
