[ADD] - #61231 - Added option to clean emails (DataPrivacy)

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
@@ -81,6 +81,13 @@
                     </tr>
                     <tr>
                         <td class="span3">
+                        </td>
+                        <td class="span9">
+                            @Html.CheckBoxFor(m => m.ReplaceEmails) @Translation.GetCoreTextTranslation("Ta bort e-mail adresser i ärendelogg och historik")
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="span3">
                             @Translation.GetCoreTextTranslation("Ersätt data med")
                         </td>
                         <td class="span9">
