--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -13,14 +13,14 @@
             lastErrorMessage = Model.Result.GenerateRawMessage();
         }
     }
-    var extendedFormId = Model.ExtendedCaseDataModel.FormModel.Id;
+    var extendedFormId = Model.ExtendedCaseDataModel.ExtendedCaseFormId;
     /*Debug mode*/
     //Model.ExtendedCaseDataModel.FormModel.Path =
     //    "http://dhhelpdesk-ikea-bschr-v5-ec.datahalland.se/ExtendedCase/?formId=" + extendedFormId + "&autoLoad=1";
 
     var downloadCaseFileUrl = Url.Action("DownloadNewCaseFile");
     var downloadCaseFileParamUrl = (!string.IsNullOrEmpty(Model.CaseDataModel.CaseFileKey) ? "id=" + Model.CaseDataModel.CaseFileKey + "&" : string.Empty);
-    var downloadCaseFileCompleteUrl = downloadCaseFileUrl + "?" + "id=" + "{id}" + "&fileName=" + "{name}";    
+    var downloadCaseFileCompleteUrl = downloadCaseFileUrl + "?" + "id=" + "{id}" + "&fileName=" + "{name}";
 }
 
 <script type="text/javascript">
