--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/_DataPrivacyHistory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/_DataPrivacyHistory.cshtml
@@ -29,11 +29,11 @@
             <table class="table table-striped table-bordered table-hover table-cases">
                 <thead>
                 <tr>
-                    <th>@Translation.GetCoreTextTranslation("Registreringsdatum")</th>
+                    <th class="w20">@Translation.GetCoreTextTranslation("Registreringsdatum")</th>
                     <th>@Translation.GetCoreTextTranslation("Ärenden")</th>
-                    <th>Data</th>
-                    <th>@Translation.GetCoreTextTranslation("Bifogade filer")</th>
-                    <th>@Translation.GetCoreTextTranslation("Utförd")</th>
+                    <th class="w30">Data</th>
+                    <th class="w15">@Translation.GetCoreTextTranslation("Bifogade filer")</th>
+                    <th class="w20">@Translation.GetCoreTextTranslation("Utförd")</th>
                 </tr>
                 </thead>
                 <tbody id="dph_Table_rows">
