--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/_DataPrivacyHistoryTable.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/_DataPrivacyHistoryTable.cshtml
@@ -1,40 +1,15 @@
-﻿@using DH.Helpdesk.BusinessData.Models.Gdpr
-@model IList<GdprOperationsAuditOverview>
+﻿@model IList<DH.Helpdesk.Web.Models.Gdpr.GdprOperationsHistoryListItem>
 
 @{ Layout = null; }
 
-@functions
+@foreach (var item in Model)
 {
-    string FormatCaseStatus(GdprOperationsAuditOverview item)
-    {
-        var closedText = Translation.GetCoreTextTranslation("Avslutade");
-        var openedText = Translation.GetCoreTextTranslation("Öppna");
-        return item.ClosedOnly ? closedText : string.Format("{0}, {1}", closedText, openedText);
-    }
-
-    string FormatAttachments(GdprOperationsAuditOverview item)
-    {
-        var caseText = Translation.GetCoreTextTranslation("Ärende");
-        var logPostsText = Translation.GetCoreTextTranslation("Ärendelogg");
-        var res = new List<string>();
-        if (item.RemoveCaseAttachments)
-            res.Add(caseText);
-
-        if (item.RemoveLogAttachments)
-            res.Add(logPostsText);
-
-        return res.Any() ? string.Join(", ", res) : string.Empty;
-    }
+    <tr>
+        <td>@item.RegistrationDate</td>
+        <td>@item.Cases</td>
+        <td>@item.Data</td>
+        <td>@item.AttachedFiles</td>
+        <td>@item.Executed</td>
+    </tr>
 }
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@string.Format("{0} - {1}", item.RegDateFrom.Value.ToShortDateString(), item.RegDateTo.Value.ToShortDateString()) </td>
-            <td>@FormatCaseStatus(item) </td>
-            <td>@(item.Fields.Any() ? string.Join(", ", item.Fields) : string.Empty)</td>
-            <td>@FormatAttachments(item)</td>
-            <td>@item.ExecutedDate.ToString("yyyy-MM-dd hh:mm:ss")</td>
-        </tr>
-    }
 
