--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -1115,6 +1115,13 @@ table th.thpointer {
             filter: alpha(opacity=75);
         }
 
+
+.w10 { width: 10% }
+.w15 { width: 15% }
+.w20 { width: 20% }
+.w30 { width: 30% }
+.w40 { width: 40% }
+
 .tableform {
     width: 100%;
     margin-bottom: 10px;
